# AgentGym

./: .gitignore  LICENSE  Makefile  NEXT_TODO.md  PLAN.md  PROGRESS.md  README.md  pyproject.toml
artifacts/: benchmark_v0.csv  replay_run1.jsonl
docs/: day1_self_review.md  sprint_report_20260308.md
schemas/: event_schema.yaml  world_state_schema.yaml
scripts/: ci_check.sh  run_benchmark.py  smoke_check.py  summarize_benchmark.py
src/agentgym/: __init__.py
src/agentgym/core/: allocator.py  events.py  replay.py  simulator.py  validator.py  world.py
src/agentgym/envs/: mvp_world.py
src/agentgym/eval/: metrics.py  runner.py
src/agentgym/policies/: base.py  independent.py  planner_worker.py  shared_memory.py
tests/: test_benchmark_scenarios.py  test_event_order.py  test_metrics_split_and_memory.py  test_policy_signal_and_comm.py  test_simulator_smoke.py  test_validator_allocator_replay.py
